--- a/pages/crew/index.html
+++ b/pages/crew/index.html
@@ -37,13 +37,15 @@
       <section class="crew-section">
         <h1><span>02</span>MEET YOUR CREW</h1>
         <div class="crew-info">
-          <div class="crew-details">
-            <h3 class="role">Commander</h3>
-            <h1 class="name">Douglas Hurley</h1>
-            <p class="description">
-              Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. 
-              He launched into space for the third time as commander of Crew Dragon Demo-2.
-            </p>
+          <div class="left-section">
+            <div class="crew-details">
+              <h3 class="role">Commander</h3>
+              <h1 class="name">Douglas Hurley</h1>
+              <p class="description">
+                Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. 
+                He launched into space for the third time as commander of Crew Dragon Demo-2.
+              </p>
+            </div>
             <div class="carousel">
               <span class="dot dot-active" onclick="changeCrew(0)"></span>
               <span class="dot" onclick="changeCrew(1)"></span>
