feat: apin animation

--- a/pages/destination/index.html
+++ b/pages/destination/index.html
@@ -38,7 +38,7 @@
         <!-- <div class="content"> -->
           <h1 class="title"><span>01</span>PICK YOUR DESTINATION</h1>
           <div class="content-info">
-            <div class="image">
+            <div class="image rotate-slow">
               <img src="../../starter-code/assets/destination/image-moon.png" alt="Moon" id="planet-image">
             </div>
 
